2002-02-21  Jeffrey Stedfast  <fejj@ximian.com>

	* doc/*: Updated.

	* configure.in: Updated version to 0.8.0

2002-01-25  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-charset.c (g_mime_charset_name): Updated for AIX, HPUX,
	IRIX, and Sun systems.

2002-01-24  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-iconv.c (iconv_cache_bucket_add_node): Fixed an oops.
	(iconv_cache_bucket_get_first_unused): Fixed another oops.

2002-01-20  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-data-wrapper.c (g_mime_data_wrapper_write_to_stream):
	Handle the x-uuencode encoding type.

	* gmime-utils.c (g_mime_utils_uuencode_close): No longer needs a
	uulen argument since it is now compacted into the state argument.
	(g_mime_utils_uuencode_step): Same here.

	* gmime-filter-basic.c (filter_filter): Ignore data until we have
	found the "begin" line. Also, we no longer need uulen.
	(filter_complete): Same.

	* gmime-part.c (g_mime_part_encoding_to_string): Handle
	x-uuencode.
	(g_mime_part_encoding_from_string): Same.
	(g_mime_part_set_pre_encoded_content): Here too.
	(write_content): And again here.

2002-01-19  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-iconv.c (iconv_node_new): Return the node - how did I miss
	this!?

2002-01-18  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Fixed more silliness.

	* acconfig.h: Added #undef's for some iconv stuff.

	* gmime-filter-charset.c (g_mime_filter_charset_new): Put the
	charset arguments in the right order.

	* gmime-iconv.c (g_mime_iconv_open): Swap the to/from arguments so
	that they are in the same order as iconv_open.

	* gmime-iconv-utils.c (iconv_utils_init): Put the to/from
	arguments in the right order.

2002-01-17  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-iconv-utils.c (g_mime_iconv_strndup): If we get an EILSEQ,
	just return NULL rather than g_strndup'ing the original
	string. We'd rather get back NULL and know it failed than get back
	a string thinking everything went okay.
