@@ -1152,7 +1152,6 @@ write_content (GMimePart *part, GMimeStream *stream)
 		g_mime_stream_reset (content_stream);
 		written = g_mime_stream_write_to_stream (content_stream, stream);
 		g_mime_stream_unref (content_stream);
-		g_mime_stream_flush (stream);
 	}
 	
 	/* this is just so that I get a warning on fail... */
@@ -1186,13 +1185,11 @@ g_mime_part_write_to_stream (GMimePart *mime_part, GMimeStream *stream)
 		
 		/* write the mime headers */
 		g_mime_header_write_to_stream (mime_part->headers, stream);
-		g_mime_stream_write (stream, "\n", 1);
 		
 		child = mime_part->children;
 		while (child) {
-			g_mime_stream_printf (stream, "--%s\n", boundary);
+			g_mime_stream_printf (stream, "\n--%s\n", boundary);
 			g_mime_part_write_to_stream (child->data, stream);
-			g_mime_stream_write (stream, "\n", 1);
 			
 			child = child->next;
 		}
@@ -1204,7 +1201,6 @@ g_mime_part_write_to_stream (GMimePart *mime_part, GMimeStream *stream)
 		
 		g_mime_stream_write (stream, "\n", 1);
 		write_content (mime_part, stream);
-		g_mime_stream_write (stream, "\n", 1);
 	}
 }
 
