@@ -1,3 +1,8 @@
+2002-03-03  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime-part.c (g_mime_part_write_to_stream): Get rid of some
+	extra line feeds.
+
 2002-02-21  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* doc/*: Updated.
